# feifei-tools

./: Cargo.toml  README.md
src/: main.rs
src/system/: bar_system.rs  mod.rs
src/system/tray/: tray_menu.rs
src/user/: image_attr.rs  mod.rs
src/utils/: image_convert.rs  image_resize.rs  jpeg_to.rs  mod.rs  png_to.rs  select_path.rs
ui/: Main.slint  Theme.slint
ui/components/system/: Bar.slint  Left_menu.slint
ui/components/user/: FFAbout.slint  Home_page.slint  Image_convert.slint
ui/model/system/: System_global.slint
ui/model/user/: Image_attr_global.slint
ui/widgets/: FFButton.slint  FFTable.slint
