[package]
name = "feifei-tools"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
image = "0.24.7"
ico = "0.3.0"
svg = "0.13.1"
base64 = "0.21.4"
slint = {version = "1.2.1"}
i-slint-backend-winit = "1.2.1"
winit = "0.28.6"
notify-rust = "4.9.0"
tokio ={ version = "1",features = ["sync","rt-multi-thread","macros","time"]}
tray-icon = "0.9"
once_cell = "1.18.0"
rfd = "0.11.4"

[build-dependencies]
slint-build = "1.2.1"